--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                         <option value="2">Seconda immagine</option>
                         <option value="3">Terza immagine</option>
                     </select>
-                    <button @click="newImg" class="btn btn-primary rounded-pill">Cliccami</button>
+                    <button @click="" class="btn btn-primary rounded-pill">Cliccami</button>
 
                 </div>
                 <div class="my-image">
-                    <img :src="imageUrl" alt="">
+                    <img :src="imageUrl" class="img-fluid p-3" alt="">
                 </div>
             </div>
         </div>
