commento su select

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <input v-model="title" type="text" placeholder="Inserisci il testo da scrivere come titolo">
                     <input v-model="myClass" type="text" placeholder="Inserisci le classi da aggiungere al titolo">
                     <input v-model="imageUrl" type="text" placeholder="Inserisci il link url dell'immagine da aggiungere">
-                    <select name="images" id="images">
+                    <!-- <select name="images" id="images">
                         <option value="1">Prima immagine</option>
                         <option value="2">Seconda immagine</option>
                         <option value="3">Terza immagine</option>
-                    </select>
+                    </select> -->
                     <button @click="newImg" class="btn btn-primary rounded-pill" >Cliccami</button>
 
                 </div>
