modifica select in JS

--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
                     <input v-model="title" type="text" placeholder="Inserisci il testo da scrivere come titolo">
                     <input v-model="myClass" type="text" placeholder="Inserisci le classi da aggiungere al titolo">
                     <input v-model="imageUrl" type="text" placeholder="Inserisci il link url dell'immagine da aggiungere">
-                    <!-- <select name="images" id="images">
+                    <select name="images" id="images">
                         <option value="1">Prima immagine</option>
                         <option value="2">Seconda immagine</option>
                         <option value="3">Terza immagine</option>
-                    </select> -->
-                    <button @click="newImg" class="btn btn-primary rounded-pill" >Cliccami</button>
-
+                    </select>
+                    <button v-on:click="firstImg" class="btn btn-primary rounded-pill fw-bold" >Scegli l'immagine e cliccami</button>
                 </div>
                 <div class="my-image">
                     <img :src="imageUrl" class="img-fluid p-3" alt="">
